# smart-assistant

./: .env.template  Makefile  README.md  assistant.py  docker-compose.yaml  engine.py  main.py  pyproject.toml  requirements.txt  server.py  smart_assistant.py
app/: package-lock.json  package.json
app/src/: App.tsx
app/src/components/: API.ts  AudioRecorder.tsx  Chat.tsx
assistant/: .gitignore  config.py  db.py  main.py  requirements.txt
assistant/mycalendar/: __init__.py  controller.py  repository.py  service.py
assistant/mymusic/: __init__.py  audio_player.py  controller.py
backbone/: test.sh
backbone/chatbot/: Dockerfile  README.md  entrypoint.sh
backbone/embeddings/: Dockerfile  README.md  entrypoint.sh
backbone/speech-recognition/: Dockerfile  README.md
backbone/text-to-speech/: Dockerfile  README.md  entrypoint.sh
backbone/text-to-speech/onnx-server/: README.md
backbone/text-to-speech/onnx-server/assets/: vocab.json
backbone/utils/: .gitignore  entrypoint.sh
chatbot/: .gitignore  Dockerfile  README.md  entrypoint.sh
embeddings/: Dockerfile  README.md
engine/: agent.py  config.py
engine/ai/: asr.py  embeddings.py  llm.py  rag.py  tts.py
engine/tools/: __init__.py  calculator.py  calendar.py  document_qa.py  fallback.py  finance.py  music.py  weather.py
speech-recognition/: .gitignore  Dockerfile  README.md  entrypoint.sh
src/: chatbot.py  main.py  smart_assistant.py  speech_recognition.py  text_to_speech.py
text-to-speech/: Dockerfile  README.md  entrypoint.sh  requirements.txt  server.py
utils/: entrypoint.sh
